--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1034,6 +1034,21 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   location  = {San Diego, California},
 }
 
+@Article{mendez2016,
+  author   = {Mendez, Derek and Watkins, Herschel and Qiao, Shenglan and Raines, Kevin S. and Lane, Thomas J. and Schenk, Gundolf and Nelson, Garrett and Subramanian, Ganesh and Tono, Kensuke and Joti, Yasumasa and Yabashi, Makina and Ratner, Daniel and Doniach, Sebastian},
+  journal  = {IUCrJ},
+  title    = {{Angular correlations of photons from solution diffraction at a free-electron laser encode molecular structure}},
+  year     = {2016},
+  month    = {Nov},
+  number   = {6},
+  pages    = {420--429},
+  volume   = {3},
+  abstract = {During X-ray exposure of a molecular solution, photons scattered from the same molecule are correlated. If molecular motion is insignificant during exposure, then differences in momentum transfer between correlated photons are direct measurements of the molecular structure. In conventional small- and wide-angle solution scattering, photon correlations are ignored. This report presents advances in a new biomolecular structural analysis technique, correlated X-ray scattering (CXS), which uses angular intensity correlations to recover hidden structural details from molecules in solution. Due to its intense rapid pulses, an X-ray free electron laser (XFEL) is an excellent tool for CXS experiments. A protocol is outlined for analysis of a CXS data set comprising a total of half a million X-ray exposures of solutions of small gold nanoparticles recorded at the Spring-8{\AA}ngstr{\"{o}}m Compact XFEL facility (SACLA). From the scattered intensities and their correlations, two populations of nanoparticle domains within the solution are distinguished: small twinned, and large probably non-twinned domains. It is shown analytically how, in a solution measurement, twinning information is only accessible {\it via} intensity correlations, demonstrating how CXS reveals atomic-level information from a disordered solution of like molecules.},
+  doi      = {10.1107/S2052252516013956},
+  keywords = {angular photon correlations, solution diffraction, XFELs, correlated X-ray scattering, gold nanoparticles},
+  url      = {https://doi.org/10.1107/S2052252516013956},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
