--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -262,7 +262,7 @@ For a Lorentzian spectrum (see \fref{eq:docdecay}), the numerical solution of \f
 \begin{figure}
 	\centering
 	\includegraphics[width=0.5\linewidth]{images/modes_plot.pdf}
-	\caption{Temporal Modes}
+	\caption[Temporal Modes for a Lorentzian Spectrum and Gaussian excitation]{Temporal Modes for a Lorentzian Spectrum and Gaussian excitation: In the limit of longer excitation pulses, the number of modes increases linear with the pulse duration.}
 	\label{fig:modes}
 \end{figure}
 
