--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -127,7 +127,7 @@ If multiple images are taken, under the assumption of ergodicity, the expectatio
 		\begin{subfigure}[t]{0.4\textwidth}
 			\centering
 			\includegraphics[width=0.9\textwidth]{images/accessibleq2.png}
-			\caption{Accessible reciprocal space compared to CDI}
+			\caption{Accessible reciprocal space compared to CDI }
 		\end{subfigure}\\
 		\begin{subfigure}[t]{0.4\textwidth}
 			\centering
@@ -143,7 +143,7 @@ If multiple images are taken, under the assumption of ergodicity, the expectatio
 	\caption{Correlation pairs dependence on q} 
 \end{subfigure}\\
 	\end{tabular}
-	\caption{Cats}
+	\caption[Accessible reciprocal space]{The accesible reciprocal space with an 1024x1024\,pixel (50\,um) pixelsize at XXX distance and XXX\,keV is shown in a) and b). In a), the surface of the Ewald sphere accessible in an diffraction experiment is shown in green for comparison. IDI allows a reconstruction of a three dimensional volume. The position of Bragg peaks for an XXX is shown in b). As the accessible $q_z$ is depended on $q_x$/$q_y$ and smaller the larger the latter two, in this setup a precise alignment of the detector with regard to the lattice planes if useful to be able to image the maximal number of peaks. Using a square, centered, planar detector with uniform pixelsize, the number of correlation pairs for resulting in the same $\vec{q}$ depends on $\vec{q}$ as shown in c).}
 \end{figure}
 
 
@@ -151,6 +151,16 @@ If multiple images are taken, under the assumption of ergodicity, the expectatio
 \subsection{Number of images}
 As shown in \fref{fig:SNRNimages}, the SNR scales with  the square root of the independent images. This will be used to estimate the number of shots necessary to achieve a SNR greater than three to be able to experimentally verify IDI as an imaging method.
  
+\subsection{Number of Modes}
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.4\textwidth}
+		\includegraphics[width=\linewidth]{images/modes.pdf}
+		\caption{Signal dependence on number of modes}
+		\label{fig:modes}
+	\end{subfigure}
+\end{figure}
+
 \subsection{Undersampling and  Sample Size}
 
 
