fix image mixup

--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -155,7 +155,7 @@ As shown in \fref{fig:SNRNimages}, the SNR scales with  the square root of the i
 \begin{figure}
 	\centering
 	\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\linewidth]{images/modes.pdf}
+		\includegraphics[width=\linewidth]{images/modes_signal.pdf}
 		\caption{Signal dependence on number of modes}
 		\label{fig:modes}
 	\end{subfigure}
