--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -272,8 +272,10 @@ As the used X-ray detectors are polarization insensitive and X-ray fluorescence 
 
 
 Path differences longer than the coherence length give additional modes $M_S$, therefore the speckle visibility will be reduced for large samples:
+This is for example important, if the exciting beam is not perpendicular to the detector (such as in an off-axis setup), as the excitation time difference between different parts of the a thick sample is not compensated for by the difference in flight time to the detector (in a setup with a detector perpendicular to the beam, fluoresence from different emitters along the sample thickness will arrive at approximately equal time, therefor the sample thickness does not introduce additional modes)
 
-If the speckle pattern is not spatially resolved by the detector because its resolution is to low compared to the change in intensity, undersampling will occur, the meassured signal will be spatially averaged giving independent sampling modes $M_D$
+
+If the speckle pattern is not spatially resolved by the detector because its resolution is to low compared to the change in intensity, undersampling will occur, the meassured signal will be spatially averaged giving independent sampling "modes" $M_D$
 
 
 
@@ -353,7 +355,7 @@ Following the idea of Trost et. al, this can be used so estimate the noise of an
 
 \begin{figure}
 \centering
-\includegraphics[width=0.6\linewidth]{images/modes.pdf}
+\includegraphics[width=0.4\linewidth]{images/modes_stat.pdf}
 \caption[Photon Statistics with different numbers of Modes]{Photon statistics with different numbers of modes $M$ and equal mean of 0.1\,photons. A lower number of modes corresponds the an higher probability of observing multi photon events. The limit of a high number of modes is a Poisson distribution.}
 \end{figure}
 \section{Kossel Lines}
