--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -272,7 +272,7 @@ As the used X-ray detectors are polarization insensitive and X-ray fluorescence 
 
 
 Path differences longer than the coherence length give additional modes $M_S$, therefore the speckle visibility will be reduced for large samples:
-This is for example important, if the exciting beam is not perpendicular to the detector (such as in an off-axis setup), as the excitation time difference between different parts of the a thick sample is not compensated for by the difference in flight time to the detector (in a setup with a detector perpendicular to the beam, fluoresence from different emitters along the sample thickness will arrive at approximately equal time, therefor the sample thickness does not introduce additional modes)
+This is for example important, if the exciting beam is not perpendicular to the detector (such as in an off-axis setup), as the excitation time difference between different parts of the a thick sample is not compensated for by the difference in flight time to the detector or in a wide angle experiment. In a small angle setup with a detector perpendicular to the beam, fluorescence from different emitters along the sample thickness will arrive at approximately equal time, therefor the sample thickness does not introduce additional modes)
 
 
 If the speckle pattern is not spatially resolved by the detector because its resolution is to low compared to the change in intensity, undersampling will occur, the meassured signal will be spatially averaged giving independent sampling "modes" $M_D$
