--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%   DEFINITIONEN   %%%%%%%%%%%%%%%
 %\pdfminorversion=5 
 \RequirePackage[2020-02-02]{latexrelease}
-\documentclass[12pt,a4paper,twoside]{book}
+\documentclass[12pt,a4paper,oneside]{book}
 
 %Packages
 \usepackage[utf8]{inputenc}
