--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -284,7 +284,7 @@ This simulations show that in high angles the limited coherence length of the fl
 	\caption[Integration in Time Dependent IDI Simulation]{To illustrate the integration in the time dependent IDI simulation, the (normalized) scalar field at one point of the detector created by 10 emitting atoms with $\tau$=1\,fs and a pulse FWHM of 2\,fs is shown. The solid colors show each atom's field, the line plot the (phase correct) sum. The simplify the calculations, only the time points marked with stars are calculated. To solve the integral \fref{eq:tdint}, it's sufficient to calculated the squared magnitude at those points and to do a piecewise integration from each star-shaped marker the next dot-shaped marker. The color wheel in the top right shows colors used for phase encoding in the plot.}
 	\label{fig:tdplot}
 \end{figure}
-I
+
 
 \begin{figure}
 	\centering
@@ -322,3 +322,9 @@ I
 
 \section{Implications for an experimental design}
 
+The result of a simulation for a thick 5\,um Copper foil, rotated 45° with respect to the beam (200\,nm focus FWHM), measured with an detector with 50\,um pixel size placed in a distance of 1\,m  perpendicular to the beam is shown in \fref{fig:simfoil}.
+\begin{figure}
+	\centering
+	\includegraphics[width=0.5\linewidth]{images/sim_foil5umCu.pdf}
+	\label{fig:simfoil}
+\end{figure}
